<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">cookmasterandroid</string>
    <string name="welcome_message">Welcome to cookmaster</string>
    <string name="log_in">Log in</string>
    <string name="courses">Courses</string>
    <string name="fidelity">Fidelity</string>
    <string name="chat">Chat</string>
    <string name="change_locale">Change locale</string>
    <string name="message_input_text">Enter your message</string>
    <string name="send_message_button_text">\></string>
    <string name="conversations">Conversations</string>
    <string name="course">Course</string>
    <string name="fidelity_points_1">You have</string>
    <string name="fidelity_points_2">fidelity points !</string>
    <string name="lesson">Lesson</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account_question">No account yet ?</string>
    <string name="create_account">Create account</string>
    <string name="lesson_not_unlocked">You have not unlocked this lesson yet.</string>
</resources>