<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FidelityActivity">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="32dp"
        android:textSize="32sp"
        android:text="@string/fidelity" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:text="@string/fidelity_points_1" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="32sp"
        android:layout_margin="8dp"
        android:textStyle="bold"
        android:id="@+id/fidelityPointsText"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:text="@string/fidelity_points_2" />
</LinearLayout>