<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_margin="32dp"
        android:text="@string/log_in" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:text="@string/email" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/email"
        android:layout_marginHorizontal="48dp"
        android:inputType="textEmailAddress"
        android:id="@+id/emailInput"
        android:autofillHints="emailAddress" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:text="@string/password" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textAlignment="center"
        android:layout_marginHorizontal="48dp"
        android:inputType="textPassword"
        android:id="@+id/passwordInput"
        android:autofillHints="password"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:textColor="#DD0000"
        android:text=""
        android:id="@+id/errorMessage"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="32dp"
        android:layout_gravity="center"
        android:text="@string/log_in"
        android:textSize="24sp"
        android:layout_margin="32dp"
        android:id="@+id/okButton"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:text="@string/no_account_question" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:text="@string/create_account"
        android:id="@+id/createAccountText"
        android:textStyle="bold"/>
</LinearLayout>